Made changes in index.html and cleaned up files

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                                         <li class="active"><a href="#"> Home</a></li>
                                         <li><a href="#whyrentlyhood">Why Rentlyhood</a></li>
                                         <li><a href="#ourpillars">Our Pillars</a></li>
-                                        <li><a href="#howitworks">How it works</a></li>
-                                        <li><a href="#downloadnow">Download Now</a></li>
                                         <li><a href="#ideas">Ideas</a></li> 
-                                        <li><a href="#footerid">Contact</a></li>
+                                        <li><a href="#howitworks">How it works</a></li>
+                                        <li><a href="#download">Download Now</a></li>
+                                        <li><a href="#contactus">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -110,8 +110,8 @@
         </div>
         <!-- Slider Area End -->
         <!-- Best Features Start -->
-        <section class="best-features-area section-padd4">
-            <div class="container" id = "whyrentlyhood">
+        <section class="best-features-area section-padd4" id="whyrentlyhood">
+            <div class="container">
                 <div class="row justify-content-end">
                     <div class="col-xl-8 col-lg-10">
                         <!-- Section Tittle -->
@@ -179,8 +179,8 @@
         </section>
         <!-- Best Features End -->
         <!-- Services Area Start -->
-        <section class="service-area sky-blue section-padding2">
-            <div class="container" id = "ourpillars">
+        <section class="service-area sky-blue section-padding2" id="ourpillars">
+            <div class="container">
                 <!-- Section Tittle -->
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-6">
@@ -229,11 +229,11 @@
         </section>
         <!-- Services Area End -->
         <!-- Applic App Start -->
-        <div class="applic-apps section-padding2">
+        <div class="applic-apps section-padding2" id="ideas">
             <div class="container-fluid">
                 <div class="row">
                     <!-- slider Heading -->
-                    <div class="col-xl-4 col-lg-4 col-md-8" id="ideas">
+                    <div class="col-xl-4 col-lg-4 col-md-8">
                         <div class="single-cases-info mb-30">
                             <h3>Need some ideas?</h3>
                             <p>Here are some items that you can rent or lend on Rentlyhood</p>
@@ -289,8 +289,8 @@
         </div>
         <!-- Applic App End -->
         <!-- How Rentlyhood Works Start -->
-        <section class="best-pricing pricing-padding" data-background="assets/img/gallery/best_pricingbg.jpg">
-            <div class="container" id="howitworks">
+        <section class="best-pricing pricing-padding" data-background="assets/img/gallery/best_pricingbg.jpg" id="howitworks">
+            <div class="container">
                 <!-- Section Tittle -->
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-6 col-md-8">
@@ -307,7 +307,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6">
-                        <div class="single-card text-center mb-30">
+                        <div class="single-card text-center mb-50">
                             <div class="card-top">
                                 <h4>How to Rent?</h4>
                                 <img src="assets/img/shape/Photo Sharing-bro.png" style="max-width: 100%;">
@@ -318,9 +318,8 @@
                                     <li>Choose dates and submit the booking request</li>
                                     <li>Make payment once lender approves booking request</li>
                                 </ul>
-                                <!-- <a href="https://www.instagram.com/reel/Cs4EHYDo_5w/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="btn card-btn1"><i class="fas fa-play p-0 m-0"></i> Watch Tutorial</a> -->
-                                <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video btn rent-lend-play-btn ani-btn" href="https://www.instagram.com/reel/Cs4EHYDo_5w/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fas fa-play"></i> &ensp; Watch Tutorial</a>
                             </div>
+                        <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video btn rent-lend-play-btn ani-btn" href="https://www.instagram.com/reel/Cs4EHYDo_5w/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fas fa-play"></i> &ensp; Watch Tutorial</a>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
@@ -336,8 +335,8 @@
                                     <li>Submit for Approval</li>
                              
                                 </ul>
-                                <a href="https://www.instagram.com/reel/CtbsjNnI9lg/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="popup-video btn rent-lend-play-btn ani-btn"><i class="fas fa-play"></i> &ensp; Watch Tutorial</a>
                             </div>
+                            <a href="https://www.instagram.com/reel/CtbsjNnI9lg/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="popup-video btn rent-lend-play-btn ani-btn"><i class="fas fa-play"></i> &ensp; Watch Tutorial</a>
                         </div>
                     </div>
                 </div>
@@ -410,7 +409,7 @@
 
 
         <!-- Available App  Start-->
-        <div class="available-app-area" id="downloadnow">
+        <div class="available-app-area" id="download">
             <div class="container">
                 <div class="row d-flex justify-content-between">
                     <div class="col-xl-5 col-lg-6">
@@ -471,7 +470,7 @@
 
        <!-- Footer Start-->
        
-      <div class="footer-main" id="footerid">
+      <div class="footer-main" id="contactus">
         <div class="footer-area footer-padding">
             <div class="container">
                 <div class="row  justify-content-between">
