--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Rentlyhood</title>
-        <meta name="description" content="">
+        <meta name="description" content="Rentlyhood is your go-to platform for renting items from your neighborhood, lending to earn a livelihood, and contributing to a more sustainable planet. Explore our wide range of rentals today." />
+        <meta name="keywords" content="Rentlyhood, rent from neighborhood, lend and earn livelihood, care for planet, sustainable living, community rentals" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="geo.region" content="IE" />
+        <meta name="geo.placename" content="Dublin" />
+        <meta name="geo.position" content="53.349805;-6.26031" />
+        <meta name="ICBM" content="53.349805, -6.26031" />
         <link rel="manifest" href="site.webmanifest">
 		<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/logo.png">
 
