Added terms and conditions for SAP and wallet

--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -84,6 +84,24 @@
       <div class="subcategory"><a href="#Limitations">Limitations</a></div>
       <div class="subcategory"><a href="#Compliance_with_Terms_of_Service">Compliance
           with Terms of Service</a></div>
+      <a href="#Rentlyhood_Student_Ambassador_Program">Rentlyhood Student Ambassador Program</a>
+      <div class="subcategory"><a href="#Eligibility_SAP">Eligibility</a></div>
+      <div class="subcategory"><a href="#Application_Process">Application Process</a></div>
+      <div class="subcategory"><a href="#Program_Duration">Program Duration</a></div>
+      <div class="subcategory"><a href="#Roles_and_Responsibilities">Roles and Responsibilities</a></div>
+      <div class="subcategory"><a href="#Incentives_and_Rewards">Incentives and Rewards</a></div>
+      <div class="subcategory"><a href="#Communication">Communication</a></div>
+      <div class="subcategory"><a href="#Non-Disclosure_Agreement">Non-Disclosure Agreement</a></div>
+      <div class="subcategory"><a href="#Termination">Termination</a></div>
+      <div class="subcategory"><a href="#Agreement">Agreement</a></div>
+      <div class="subcategory"><a href="#Changes_to_Terms">Changes to Terms</a></div>
+      <a href="#Rentlyhood_wallet">Rentlyhood Wallet</a>
+      <div class="subcategory"><a href="#Point_Accumulation">Point Accumulation</a></div>
+      <div class="subcategory"><a href="#Point_Conversion">Point Conversion</a></div>
+      <div class="subcategory"><a href="#Coupon_Generation">Coupon Generation</a></div>
+      <div class="subcategory"><a href="#Coupon_Redemption">Coupon Redemption</a></div>
+      <div class="subcategory"><a href="#Coupon_and_Point_Ownership">Coupon and Point Ownership</a></div>
+      <div class="subcategory"><a href="#General_Terms">General Terms</a></div>
       <a href="#Theft/Repairs">Theft/Repairs</a>
       <a href="#Missing_Equipment">Missing Equipment</a>
       <a href="#RENTLYHOOD’s_Role">RENTLYHOOD’s Role</a>
@@ -121,7 +139,8 @@
       <nav class="navbar navbar-expand-lg">
         <div class="pt-3">
           <a class="navbar-brand navbar-brand-left px-4" href="index.html">
-            <img src="assets/img/logo/Rentlyhood_logo.png" alt="Logo Left" width="60">
+            <img src="assets/img/logo/Rentlyhood_logo.png" alt="Logo Left"
+              width="60">
           </a>
           <a class="navbar-brand navbar-brand-center mx-auto" href="index.html">
             <img src="assets/img/logo/Rentlyhood_text.png" alt="Logo Center">
@@ -591,6 +610,95 @@
             Rentlyhood's Terms of Service and any other applicable policies.</p>
 
           <br>
+          <h3 id="Rentlyhood_Student_Ambassador_Program">Rentlyhood Student
+            Ambassador Program</h3>
+          <p>The Rentlyhood Student Ambassador Program is designed to engage and
+            empower passionate individuals to promote our platform, build a
+            community, and earn valuable rewards. Please carefully read and
+            understand the following terms and conditions before applying:</p>
+          <h5 id="Eligibility_SAP">Eligibility:</h5>
+          <p>To participate in the program, you must be a currently enrolled
+            student in Ireland and at least 18 years old.</p>
+          <h5 id="Application_Process">Application Process:</h5>
+          <p>To apply, fill out the application form available on our website or
+            send us an email to contact@rentlyhood.com. Successful candidates
+            will be selected based on their application and an interview (if
+            required).</p>
+          <h5 id="Program_Duration"> Program Duration:</h5>
+          <p>The Rentlyhood Student Ambassador Program is an ongoing initiative
+            with a semester-wise evaluation. Ambassadors can continue their role
+            as long as they meet the program's performance criteria.</p>
+          <h5 id="Roles_and_Responsibilities">Roles and Responsibilities:</h5>
+          <p>Ambassadors will actively promote Rentlyhood through various
+            marketing activities, both online and offline.Responsibilities may
+            include social media engagement, organizing events, and referring
+            users to the platform. Ambassadors must maintain professionalism and
+            adhere to our brand guidelines.</p>
+          <h5 id="Incentives_and_Rewards">Incentives and Rewards</h5>
+          <p>Ambassadors earn points for completing program activities. Points
+            can be redeemed for discounts on Rentlyhood services. Top-performing
+            ambassadors may receive additional rewards and recognition. Monthly
+            goals can earn you gift vouchers from partner companies, like Tesco,
+            Amazon, Dunnes, etc.</p>
+          <h5 id="Communication">Communication:</h5>
+          <p>Ambassadors will engage in regular communication with the
+            Rentlyhood team and fellow ambassadors.</p>
+          <h5 id="Non-Disclosure_Agreement">Non-Disclosure Agreement:</h5>
+          <p>Ambassadors must maintain the confidentiality of program details
+            and any sensitive information shared by Rentlyhood.</p>
+          <h5 id="Termination">Termination:</h5>
+          <p>Rentlyhood reserves the right to terminate an ambassador's
+            participation in the program if they violate terms and conditions.</p>
+          <h5 id="Agreement">Agreement</h5>
+          <p>By applying to the Rentlyhood Student Ambassador Program, you
+            acknowledge and accept the terms and conditions.</p>
+          <h5 id="Changes_to_Terms">Changes to Terms:</h5>
+          <p>Rentlyhood reserves the right to make changes to these terms and
+            conditions. Ambassadors will be notified of any modifications.</p>
+          <p>Join our community, promote sustainability, and help others
+            discover the benefits of sharing with Rentlyhood. We look forward to
+            having you as part of our team!</p>
+
+          <br>
+          <h3 id="Rentlyhood_wallet">Rentlyhood Wallet</h3>
+          <h5 id="Point_Accumulation">Point Accumulation:</h5>
+          <p>Users can accumulate points in their Rentlyhood wallet by
+            participating in various promotions, including referrals, completed
+            rentals, and other activities as communicated on our social media
+            handles from time to time.The number of points earned per activity
+            may vary depending on ongoing promotions.</p>
+          <h5 id="Point_Conversion">Point Conversion:</h5>
+          <p>Every 100 points accumulated in the wallet are equivalent to 1 euro
+            in-app credits.</p>
+          <h5 id="Coupon_Generation">Coupon Generation:</h5>
+          <p>Users who have accumulated 500 or more points can generate a 5 euro
+            worth coupon by clicking the "Redeem Now" button in their wallet.
+            Each coupon generated will have a fixed value of 5 euro in-app
+            credit. Users can generate a maximum of 5 coupons in a single click
+            by clicking the "Redeem Now” button. If the user has more than 2500
+            points, they can generate additional coupons by clicking the “Redeem
+            Now” button again.</p>
+          <h5 id="Coupon_Redemption">Coupon Redemption:</h5>
+          <p>Each coupon generated will have a limited validity and a minimum
+            order value requirement. The validity period and minimum order value
+            will be mentioned on the generated coupons.
+            <br>
+            Users can view all existing valid coupons at the time of payment for
+            a rental booking. Only one coupon can be used per order.
+          </p>
+          <h5 id="Coupon_and_Point_Ownership">Coupon and Point Ownership:</h5>
+          <p>Coupons generated through the wallet program are non-transferable
+            and can only be used by the user who earned them. Points earned by
+            users cannot be transferred or gifted to other users. All coupons
+            and points are only valid for individual user who has earned them
+            and cannot be shared, sold, or transferred to any other users. This
+            policy ensures fair and transparent use of coupons and points within
+            the Rentlyhood platform.</p>
+          <h5 id="General_Terms">General Terms:</h5>
+          <p>Rentlyhood reserves the right to modify, suspend, or terminate the
+            wallet program, coupons, and their terms and conditions at any time.</p>
+
+          <br>
           <h3 id="Theft/Repairs">Theft/Repairs</h3>
           <p>All claims of theft require:</p>
           <ul>
@@ -999,10 +1107,12 @@
         </div>
         <div class="col-md-2 col-sm-12 bottom">
           <span class="text-light font-size-sm">
-            Copyright 2023. Made with <img src="assets/img/logo/Heart.png" alt="Love"
+            Copyright 2023. Made with <img src="assets/img/logo/Heart.png"
+              alt="Love"
               class="d-inline mx-1" width="16" height="16"> by <a
               href="https://www.theglitterz.com/"><img
-                src="assets/img/logo/Glitterz_logo.png" class="d-inline mx-1" width="80"
+                src="assets/img/logo/Glitterz_logo.png" class="d-inline mx-1"
+                width="80"
                 height="20"></a>
           </span>
         </div>
