Updated Terms and Conditions

--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -33,7 +33,8 @@
     <div class="sidenav" id="mySidenav">
       <div id="sidenav-head" class="col-12 d-flex">
         <span class="me-auto">Contents</span>
-        <button id="sidenav-close" class="text-light"><i class="fa fa-xmark"></i></span>
+        <button id="sidenav-close" class="text-light"><i
+            class="fa fa-xmark"></i></span>
       </div>
       <a href="#Nature_of_the_Service" class="active">Nature of the Service</a>
       <a href="#How_renting_works">How renting works</a>
@@ -56,16 +57,20 @@
       <a href="#Rentlyhood_Guarantee">Rentlyhood Guarantee</a>
       <div class="subcategory"><a
           href="#To_qualify_for_the_Rentlyhood_Guarantee,_you_must_meet_these_requirements">To
-          qualify for the Rentlyhood Guarantee, you must meet these requirements</a></div>
+          qualify for the Rentlyhood Guarantee, you must meet these
+          requirements</a></div>
       <div class="subcategory"><a
           href="#The_following_items_are_not_eligible_for_the_Rentlyhood_guarantee">The
-          following items are not eligible for the Rentlyhood guarantee</a></div>
+          following items are not eligible for the Rentlyhood
+          guarantee</a></div>
       <div class="subcategory"><a
           href="#The_following_situations_are_excluded_from_the_Rentlyhood_guarantee">The
-          following situations are excluded from the Rentlyhood guarantee</a></div>
+          following situations are excluded from the Rentlyhood
+          guarantee</a></div>
       <div class="subcategory"><a
           href="#To_be_able_to_pay_out_the_warranty,_we_need_two_more_things_from_you">To
-          be able to pay out the warranty, we need two more things from you:</a></div>
+          be able to pay out the warranty, we need two more things from
+          you:</a></div>
       <div class="subcategory"><a href="#Tips_to_prevent_accidents">Tips to
           prevent accidents</a></div>
       <a href="#For_All_Users">For All Users</a>
@@ -73,34 +78,49 @@
         Disclosure of Information</a>
       <a href="#Refer_and_Earn_Program">Refer and Earn Program</a>
       <div class="subcategory"><a href="#Eligibility">Eligibility</a></div>
-      <div class="subcategory"><a href="#Referral_Process">Referral Process</a></div>
+      <div class="subcategory"><a href="#Referral_Process">Referral
+          Process</a></div>
       <div class="subcategory"><a href="#Incentives">Incentives</a></div>
       <div class="subcategory"><a
           href="#Reward_Qualification_and_program_details">Reward Qualification
           and program details</a></div>
       <div class="subcategory"><a href="#Fraudulent_Activity">Fraudulent
           Activity</a></div>
-      <div class="subcategory"><a href="#Program_Changes">Program Changes</a></div>
+      <div class="subcategory"><a href="#Program_Changes">Program
+          Changes</a></div>
       <div class="subcategory"><a href="#Limitations">Limitations</a></div>
-      <div class="subcategory"><a href="#Compliance_with_Terms_of_Service">Compliance
+      <div class="subcategory"><a
+          href="#Compliance_with_Terms_of_Service">Compliance
           with Terms of Service</a></div>
-      <a href="#Rentlyhood_Student_Ambassador_Program">Rentlyhood Student Ambassador Program</a>
+      <a href="#Rentlyhood_Student_Ambassador_Program">Rentlyhood Student
+        Ambassador Program</a>
       <div class="subcategory"><a href="#Eligibility_SAP">Eligibility</a></div>
-      <div class="subcategory"><a href="#Application_Process">Application Process</a></div>
-      <div class="subcategory"><a href="#Program_Duration">Program Duration</a></div>
-      <div class="subcategory"><a href="#Roles_and_Responsibilities">Roles and Responsibilities</a></div>
-      <div class="subcategory"><a href="#Incentives_and_Rewards">Incentives and Rewards</a></div>
+      <div class="subcategory"><a href="#Application_Process">Application
+          Process</a></div>
+      <div class="subcategory"><a href="#Program_Duration">Program
+          Duration</a></div>
+      <div class="subcategory"><a href="#Roles_and_Responsibilities">Roles and
+          Responsibilities</a></div>
+      <div class="subcategory"><a href="#Incentives_and_Rewards">Incentives and
+          Rewards</a></div>
       <div class="subcategory"><a href="#Communication">Communication</a></div>
-      <div class="subcategory"><a href="#Non-Disclosure_Agreement">Non-Disclosure Agreement</a></div>
+      <div class="subcategory"><a
+          href="#Non-Disclosure_Agreement">Non-Disclosure Agreement</a></div>
       <div class="subcategory"><a href="#Termination">Termination</a></div>
       <div class="subcategory"><a href="#Agreement">Agreement</a></div>
-      <div class="subcategory"><a href="#Changes_to_Terms">Changes to Terms</a></div>
+      <div class="subcategory"><a href="#Changes_to_Terms">Changes to
+          Terms</a></div>
       <a href="#Rentlyhood_wallet">Rentlyhood Wallet</a>
-      <div class="subcategory"><a href="#Point_Accumulation">Point Accumulation</a></div>
-      <div class="subcategory"><a href="#Point_Conversion">Point Conversion</a></div>
-      <div class="subcategory"><a href="#Coupon_Generation">Coupon Generation</a></div>
-      <div class="subcategory"><a href="#Coupon_Redemption">Coupon Redemption</a></div>
-      <div class="subcategory"><a href="#Coupon_and_Point_Ownership">Coupon and Point Ownership</a></div>
+      <div class="subcategory"><a href="#Point_Accumulation">Point
+          Accumulation</a></div>
+      <div class="subcategory"><a href="#Point_Conversion">Point
+          Conversion</a></div>
+      <div class="subcategory"><a href="#Coupon_Generation">Coupon
+          Generation</a></div>
+      <div class="subcategory"><a href="#Coupon_Redemption">Coupon
+          Redemption</a></div>
+      <div class="subcategory"><a href="#Coupon_and_Point_Ownership">Coupon and
+          Point Ownership</a></div>
       <div class="subcategory"><a href="#General_Terms">General Terms</a></div>
       <a href="#Theft/Repairs">Theft/Repairs</a>
       <a href="#Missing_Equipment">Missing Equipment</a>
@@ -119,12 +139,14 @@
       <a href="#Indemnity">Indemnity</a>
       <a href="#GDPR_Clause_for_Rentlyhood_Mobile_Application">GDPR Clause for
         Rentlyhood Mobile Application</a>
-      <div class="subcategory"><a href="#Data_Collection">Data Collection</a></div>
+      <div class="subcategory"><a href="#Data_Collection">Data
+          Collection</a></div>
       <div class="subcategory"><a href="#Purpose_of_Data_Processing">Purpose of
           Data Processing</a></div>
       <div class="subcategory"><a href="#Legal_Basis_for_Data_Processing">Legal
           Basis for Data Processing</a></div>
-      <div class="subcategory"><a href="#Data_Retention">Data Retention</a></div>
+      <div class="subcategory"><a href="#Data_Retention">Data
+          Retention</a></div>
       <div class="subcategory"><a href="#Data_Subject_Rights">Data Subject
           Rights</a></div>
       <div class="subcategory"><a href="#Data_Security">Data Security</a></div>
@@ -194,7 +216,8 @@
             <li>Based upon the requested date, Lender may approve or reject
               rentee’s request. Once approved, rentee and lender may use in-app
               chat to further align/agree on any other details.</li>
-            <li>Rentee would then proceed ahead with the payment on the app.</li>
+            <li>Rentee would then proceed ahead with the payment on the
+              app.</li>
             <li>On rental start date, rentee should pick-up items from Lender
               from the mentioned pick-up location. Unless otherwise agreed by
               Owner/lender and Rentee in writing via in-app chat, all rented
@@ -262,7 +285,8 @@
             Damage Claim within ten (10) days of Rentlyhood decision on a Damage
             Claim, Rentlyhood will seek reimbursement from Borrower/Rentee to
             the extent Rentlyhood or its insurer (if any) pays out on a Damage
-            Claim. <b>RentlyHood is not an insurance company, broker, or agent.</b>
+            Claim. <b>RentlyHood is not an insurance company, broker, or
+              agent.</b>
             Rentlyhood is not an insurance provider, broker, or agent.
             Rentlyhood is not licensed in any state or country to be an
             insurance provider, broker, or agent.</p>
@@ -499,10 +523,12 @@
 
           <h5
             id="To_be_able_to_pay_out_the_warranty,_we_need_two_more_things_from_you">To
-            be able to pay out the warranty, we need two more things from you:</h5>
+            be able to pay out the warranty, we need two more things from
+            you:</h5>
           <ul>
             <li>a copy of the receipt and bank statement that shows us that you
-              have purchased a replacement product or the cost of the repair;</li>
+              have purchased a replacement product or the cost of the
+              repair;</li>
             <li>you verify your personal details by providing us with a copy of
               your passport/ID/driving license.</li>
           </ul>
@@ -522,7 +548,8 @@
             <li>Before and after the rental, take good quality pictures of the
               item so that you have proof of the items rented, in case of any
               dispute</li>
-            <li>Sharing is based on mutual reasonableness , trust and respect</li>
+            <li>Sharing is based on mutual reasonableness , trust and
+              respect</li>
           </ul>
 
           <br>
@@ -581,13 +608,12 @@
             program details’ below.</p>
           <h5 id="Reward_Qualification_and_program_details">Reward Qualification
             and program details:</h5>
-          <p>To qualify for rewards, the referred user must complete (make
-            payment for the rental and return item to lender on the end date of
-            rental) their first rental on Rentlyhood app. Rewards will be
-            provided to eligible referrers and referred users within 7 days from
-            the end date of rental. The rewards will be credited to each user’s
-            Stripe account <strong>ONLY</strong>, hence setting up of Stripe
-            account is mandatory for rewards to be reflected.</p>
+          <p>To qualify for rewards, the referred user must successfully sign up
+            on the Rentlyhood app using the referral code of the referrer.
+            Rewards will be provided to eligible referrers and referred users
+            within 7 days from the date of successful sign-up in form of
+            rentlyhood points. The points will be credited to each user's
+            Rentlyhood wallet, which can be used within the app itself.</p>
           <h5 id="Fraudulent_Activity">Fraudulent Activity:</h5>
           <p>Rentlyhood reserves the right to disqualify referrals or revoke
             incentives if fraudulent activity, including but not limited to fake
@@ -648,7 +674,8 @@
             and any sensitive information shared by Rentlyhood.</p>
           <h5 id="Termination">Termination:</h5>
           <p>Rentlyhood reserves the right to terminate an ambassador's
-            participation in the program if they violate terms and conditions.</p>
+            participation in the program if they violate terms and
+            conditions.</p>
           <h5 id="Agreement">Agreement</h5>
           <p>By applying to the Rentlyhood Student Ambassador Program, you
             acknowledge and accept the terms and conditions.</p>
@@ -696,7 +723,8 @@
             the Rentlyhood platform.</p>
           <h5 id="General_Terms">General Terms:</h5>
           <p>Rentlyhood reserves the right to modify, suspend, or terminate the
-            wallet program, coupons, and their terms and conditions at any time.</p>
+            wallet program, coupons, and their terms and conditions at any
+            time.</p>
 
           <br>
           <h3 id="Theft/Repairs">Theft/Repairs</h3>
@@ -714,7 +742,8 @@
             have borrowed as stolen to law enforcement:</p>
           <ul>
             <li>If you fail to return the item, you booked at the time and place
-              agreed upon with the host and/or designated in your reservation;</li>
+              agreed upon with the host and/or designated in your
+              reservation;</li>
             <li>If you do not return the item by the end of the reservation
               period and you have not properly obtained an extension of the
               reservation through the RENTLYHOOD system as set forth here;</li>
@@ -831,7 +860,8 @@
             any portion of the Service or Content.</p>
 
           <br>
-          <h3 id="Links_and_Third-Party_Content">Links and Third-Party Content</h3>
+          <h3 id="Links_and_Third-Party_Content">Links and Third-Party
+            Content</h3>
           <p>The Service may contain links to third party products, services,
             and websites. We exercise no control over the third-party products,
             services, and websites and we are not responsible for their
@@ -910,10 +940,12 @@
             or regulation; (j) "stalk" or otherwise harass another; (k) collect
             or store personal data about other users.</p>
           <p>If you see content on the Service that violates these use
-            restrictions, please contact RENTLYHOOD at ”contact@rentlyhood.com .</p>
+            restrictions, please contact RENTLYHOOD at ”contact@rentlyhood.com
+            .</p>
           <p>In the event of a conflict or inconsistency between the explanation
             of damage or liability coverage in these terms and the policy
-            offered to the RENTLYHOOD community, the policy language controls.</p>
+            offered to the RENTLYHOOD community, the policy language
+            controls.</p>
           <h3 id="Limitation_on_Damage_Claims_Against_RENTLYHOOD">Limitation on
             Damage Claims Against RENTLYHOOD</h3>
           <p>By agreeing to these Terms of Service, users of the RENTLYHOOD
@@ -1102,7 +1134,8 @@
             mr-auto">Terms and Conditions</a>
         </div>
         <div class="col-md-1 col-sm-12 bottom">
-          <a href="privacy_policy.html" class="text-light font-size-sm mr-auto">Privacy
+          <a href="privacy_policy.html"
+            class="text-light font-size-sm mr-auto">Privacy
             Policy</a>
         </div>
         <div class="col-md-2 col-sm-12 bottom">
