Fixed Rentlyhood homepage slider image issue

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="hero__img d-none d-lg-block f-right" data-animation="fadeInRight" data-delay="1s">
-                                    <img src="assets/img/hero/rentlyhood homepage.png" alt="">
+                                    <img src="hero/rentlyhood homepage.png" alt="">
                                 </div>
                             </div>
                         </div>
